Remise du texte des services à gauche

--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ section h2 {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
+    text-align: left;
 }
 
 .service img {
@@ -195,6 +195,7 @@ section h2 {
 /* Le bouton en bas */
 .service .btn-wrapper {
     margin-top: auto;
+    text-align: center;
   }
 
 /* === GALERIE D'IMAGES === */
