--- a/services.css
+++ b/services.css
@@ -119,7 +119,7 @@ nav ul li a:hover {
 
 /* === PAGE PÔLE SOCIAL === */
 .hero-social {
-  padding: 100px 20px 60px;
+  padding: 50px 20px 60px;
   text-align: center;
   margin-top: 30px;
 }
@@ -170,9 +170,9 @@ nav ul li a:hover {
 /* === PAGE PÔLE TRAVAIL === */
 
 .hero-travail {
-  padding: 100px 20px 60px;
+  padding: 50px 20px 60px;
   text-align: center;
-  margin-top: 60px;
+  margin-top: 5px;
 }
 
 .hero-travail h1 {
@@ -222,4 +222,13 @@ nav ul li a:hover {
 .travail-activites .activite h3 {
   color: #004080;
   margin-bottom: 10px;
+}
+
+/* === FOOTER === */
+footer {
+  background-color: #004080;
+  color: white;
+  text-align: center;
+  padding: 15px 0;
+  font-size: 0.95rem;
 }
